# lithomop

./: AUTHORS  ChangeLog  INSTALL  Make.mm  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  setup.py
lithomop3d/: Make.mm  Makefile.am  Makefile.in  pylithomop3d.cc
lithomop3d/applications/: Make.mm  lithomop3dapp.py
lithomop3d/doc/: f77_elem_interp_arrays_example.inc  f77_elem_interp_dims_example.inc
lithomop3d/examples/: Makefile.am  Makefile.in
lithomop3d/liblithomop3d/: Make.mm  Makefile.am  Makefile.in  addfor.f  addpr.f  addsn.f  addstf.F  adfldp.f  assign_wink.f  autoprestr.F  bdeld_ss.f  bmatrixb.f  bmatrixn.f  bnmatrix.f  bsum.f  choldc2.f  cholsl.f  ckdiag.F  cklock.f  cmp_stiffsz.f  const.f  convert_case.f  create_id.f  cross.f  disp.f  eforce.f  elas_matinit_cmp_ss.F  elas_strs_cmp_ss.f  elas_strs_mat_cmp_ss.F  elastc.F  fill.f  formdf_ss.f  formes_ss.f  formf_ss.f  formrt.f  funcs.f  get_initial_stress.f  get_units.f  getder.f  getjac.f  (+156 more)
lithomop3d/liblithomop3d/includes/: binio.h  elas_matinit_ext.inc  elas_strs_ext.inc  elmlbl_def.inc  elmlbl_dim.inc  getstate_ext.inc  gtol_dim.inc  implicit.inc  labelc_def.inc  labelc_dim.inc  labeld_def.inc  labeld_dim.inc  labels_def.inc  labels_dim.inc  mat_prt_ext.inc  materials.inc  ncodat_def.inc  ncodat_dim.inc  nconsts.inc  ndimens.inc  nforce_def.inc  (+27 more)
lithomop3d/lithomop3d/: Application.py  ElementTypeDef.py  KeywordValueParse.py  Lithomop3d_run.py  Lithomop3d_scan.py  Lithomop3d_setup.py  Make.mm  Materials.py  __init__.py
lithomop3d/module/: Make.mm  Makefile.am  Makefile.in  array.cc  array.h  autoprestr.cc  autoprestr.h  bindings.cc  bindings.h  elastc.cc  elastc.h  exceptionhandler.cc  exceptionhandler.h  exceptions.cc  exceptions.h  lithomop3d_externs.h  lithomop3dmodule.cc  lithomop3dmodule.h  misc.cc  misc.h  numbering.cc  numbering.h  parser.cc  parser.h  scanner.cc  scanner.h  setup.cc  setup.h  sorting.cc  sorting.h  sparse.cc  sparse.h  viscos.cc  viscos.h  write_modelinfo.cc  write_modelinfo.h
lithomop3d/tests/: Make.mm  lithomop3dapp.py
(+124 files in other folders)
